Fixed "document" not being readable.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@
 }
 
 html {
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 body {
